Include/pythonrun.h
@@ -147,8 +147,6 @@ PyAPI_FUNC(void) PyOS_FiniInterrupts(void);
 PyAPI_FUNC(void) PyByteArray_Fini(void);
 PyAPI_FUNC(void) _PyRandom_Fini(void);
 
-PyAPI_DATA(PyThreadState *) _Py_Finalizing;
-
 /* Stuff with no proper home (yet) */
 PyAPI_FUNC(char *) PyOS_Readline(FILE *, FILE *, char *);
 PyAPI_DATA(int) (*PyOS_InputHook)(void);
