Python/pythonrun.c
@@ -91,8 +91,6 @@ int _Py_QnewFlag = 0;
 int Py_NoUserSiteDirectory = 0; /* for -s and site.py */
 int Py_HashRandomizationFlag = 0; /* for -R and PYTHONHASHSEED */
 
-PyThreadState *_Py_Finalizing = NULL;
-
 
 /* Hack to force loading of object files */
 int (*_PyOS_mystrnicmp_hack)(const char *, const char *, Py_ssize_t) = \
@@ -165,7 +163,6 @@ Py_InitializeEx(int install_sigs)
     if (initialized)
         return;
     initialized = 1;
-    _Py_Finalizing = NULL;
 
     if ((p = Py_GETENV("PYTHONDEBUG")) && *p != '\0')
         Py_DebugFlag = add_flag(Py_DebugFlag, p);
@@ -425,15 +422,11 @@ Py_Finalize(void)
      * the threads created via Threading.
      */
     call_sys_exitfunc();
+    initialized = 0;
 
     /* Get current thread state and interpreter pointer */
     tstate = PyThreadState_GET();
     interp = tstate->interp;
-
-    /* Remaining threads (e.g. daemon threads) will automatically exit
-       after taking the GIL (in PyEval_RestoreThread()). */
-    _Py_Finalizing = tstate;
-    initialized = 0;
 
     /* Disable signal handling */
     PyOS_FiniInterrupts();
